--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -6,6 +6,13 @@
                 <h1>This is the about page</h1>
 
                 <p>This is from template: {{index .StringMap "test"}}</p>
+                <p>
+                    {{if ne (index .StringMap "remoteIP") ""}}
+                        Your remote IP Address is {{index .StringMap "remoteIP"}} 
+                    {{else}}
+                        I don't know your ip adress yet. Visit the <a href="/">HomePage</a>so I can set it
+                    {{end}}
+                </p>
             </div>
         </div>
     </div>
