--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -5,6 +5,8 @@
             <div class="col">
                 <h1>This is the home page</h1>
                 <p>This is some text</p>
+
+                <img src="/static/images/ai_house.jpg" height = "1330" width = "2364">
             </div>
         </div>
     </div>
